--- a/app/src/main/res/layout/fragment_attendance.xml
+++ b/app/src/main/res/layout/fragment_attendance.xml
@@ -1,8 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
+        <import type="com.alamin.sales.view_model.StoreViewModel"/>
+        <import type="android.view.View.OnClickListener"/>
+        <variable
+            name="viewModel"
+            type="StoreViewModel" />
+        <variable
+            name="onSubmitClick"
+            type="OnClickListener" />
 
     </data>
 
@@ -12,9 +22,101 @@
         tools:context=".view.fragment.AttendanceFragment">
 
         <TextView
-            android:id="@+id/txtLatLong"
+            android:id="@+id/txtName"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:padding="@dimen/padding4dp"
+            android:layout_marginVertical="@dimen/padding4dp"
+            android:layout_marginHorizontal="@dimen/dimen8dp"
+            android:textColor="@color/black"
+            android:textSize="@dimen/textSizeM"
+            android:text="Name"/>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/layoutName"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:theme="@style/TextInputLayoutAppearance"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/txtName"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginHorizontal="@dimen/dimen8dp"
+            android:layout_marginVertical="@dimen/dimen4dp"
+            app:boxCornerRadiusBottomEnd="@dimen/dimen8dp"
+            app:boxCornerRadiusBottomStart="@dimen/dimen8dp"
+            app:boxCornerRadiusTopEnd="@dimen/dimen8dp"
+            app:boxCornerRadiusTopStart="@dimen/dimen8dp"
+            app:boxStrokeColor="@color/Aquamarine">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/txtAgentName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:longClickable="false"
+                android:digits="abcdefghijklmnopqrstuvwxyz- ABCDEFGHIJKLMNOPQRSTUVWXYZ"
+                android:maxLines="1"
+                android:padding="@dimen/padding12dp"
+                android:textColor="@color/gray"
+                android:textSize="@dimen/textSizeM"
+                android:text="@={viewModel.name}"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:id="@+id/txtID"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/layoutName"
+            android:padding="@dimen/padding4dp"
+            android:layout_marginVertical="@dimen/padding4dp"
+            android:layout_marginHorizontal="@dimen/dimen8dp"
+            android:textColor="@color/black"
+            android:textSize="@dimen/textSizeM"
+            android:text="User Id"/>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/layoutId"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:theme="@style/TextInputLayoutAppearance"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/txtID"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginHorizontal="@dimen/dimen8dp"
+            android:layout_marginVertical="@dimen/dimen4dp"
+            app:boxCornerRadiusBottomEnd="@dimen/dimen8dp"
+            app:boxCornerRadiusBottomStart="@dimen/dimen8dp"
+            app:boxCornerRadiusTopEnd="@dimen/dimen8dp"
+            app:boxCornerRadiusTopStart="@dimen/dimen8dp"
+            app:boxStrokeColor="@color/Aquamarine">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/txtUserId"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:longClickable="false"
+                android:maxLines="1"
+                android:padding="@dimen/padding12dp"
+                android:textColor="@color/gray"
+                android:textSize="@dimen/textSizeM"
+                android:text="@={viewModel.userId}"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.button.MaterialButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/layoutId"
+            android:backgroundTint="@color/Blue_Diamond"
+            android:text="Submit"
+            app:rippleColor="@color/Blue_Hosta"
+            android:textAllCaps="false"
+            android:layout_marginVertical="@dimen/dimen4dp"
+            app:cornerRadius="@dimen/dimen8dp"
+            android:onClick="@{onSubmitClick}"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
